version '1.0'

apply plugin: 'java'

sourceCompatibility = 1.8

repositories {
	mavenCentral()
}

dependencies {
	compile project(':Core')
	testCompile group: 'junit', name: 'junit', version: '4.11'
	testCompile 'org.hamcrest:hamcrest-all:1.3'
}
